# back-end/api/documentation/swagger.json
@@ -26,6 +26,23 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/users": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get all users in API",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/UserResponse"
+              }
+            }
+          }
+        }
+      }
+    },
     "/user": {
       "post": {
         "tags": ["Users"],
@@ -43,16 +60,22 @@
         ],
         "produces": ["application/json"],
         "responses": {
-          "200": {
+          "201": {
             "description": "New user is created",
             "schema": {
-              "$ref": "#/definitions/OK200"
+              "$ref": "#/definitions/Created201"
             }
           },
           "400": {
             "description": "Bad Request",
             "schema": {
               "$ref": "#/definitions/Error400"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/Error404"
             }
           },
           "422": {
@@ -65,18 +88,6 @@
             "description": "Internal Server Error",
             "schema": {
               "$ref": "#/definitions/Error500"
-            }
-          }
-        }
-      },
-      "get": {
-        "tags": ["Users"],
-        "summary": "Get all users in system",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/User"
             }
           }
         }
@@ -99,19 +110,31 @@
           "200": {
             "description": "User is found",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/OK200"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/Error404"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Error500"
             }
           }
         }
       },
-      "delete": {
+      "post": {
         "summary": "Delete user with given ID",
         "tags": ["Users"],
         "responses": {
           "200": {
             "description": "User is deleted",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Deleted200"
             }
           }
         }
@@ -123,9 +146,9 @@
           {
             "name": "user",
             "in": "body",
-            "description": "User with new values of properties",
+            "description": "User that we want to updated",
             "schema": {
-              "$ref": "#/definitions/UserUpdate"
+              "$ref": "#/definitions/User"
             }
           }
         ],
@@ -133,7 +156,87 @@
           "200": {
             "description": "User is updated",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Deleted200"
+            }
+          }
+        }
+      }
+    },
+    "/user/email/{email}": {
+      "parameters": [
+        {
+          "name": "email",
+          "in": "path",
+          "required": true,
+          "description": "Email of user that we want to find",
+          "type": "string"
+        }
+      ],
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get user with given Email",
+        "responses": {
+          "200": {
+            "description": "User is found",
+            "schema": {
+              "$ref": "#/definitions/OK200"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/Error404"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            }
+          }
+        }
+      }
+    },
+    "/user/password/{userId}": {
+      "parameters": [
+        {
+          "name": "userId",
+          "in": "path",
+          "required": true,
+          "description": "Id of user that we want to find",
+          "type": "string"
+        }
+      ],
+      "put": {
+        "tags": ["Users"],
+        "summary": "Updating the user's password",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "Password for updated",
+            "schema": {
+              "$ref": "#/definitions/Password"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User is found",
+            "schema": {
+              "$ref": "#/definitions/Update200"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/Error404"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Error500"
             }
           }
         }
@@ -195,6 +298,75 @@
         }
       }
     },
+    "UserResponse": {
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "5e5423f2e026820cfc84d273"
+        },
+        "name": {
+          "type": "string",
+          "uniqueItems": true,
+          "example": "fernando brozinga"
+        },
+        "email": {
+          "type": "string",
+          "uniqueItems": true,
+          "format": "email",
+          "example": "email@email.com.br"
+        },
+        "password": {
+          "type": "string",
+          "uniqueItems": true,
+          "minLength": 6
+        },
+        "checkPassword": {
+          "type": "string",
+          "uniqueItems": true,
+          "minLength": 6
+        },
+        "entryTime": {
+          "type": "string",
+          "uniqueItems": true,
+          "format": "date-time"
+        },
+        "exitTime": {
+          "type": "string",
+          "uniqueItems": true,
+          "format": "date-time"
+        },
+        "acessType": {
+          "type": "string",
+          "uniqueItems": true,
+          "enum": ["admin", "user"],
+          "example": "user"
+        },
+        "isActive": {
+          "type": "boolean",
+          "uniqueItems": true,
+          "example": "true"
+        },
+        "visible": {
+          "type": "boolean",
+          "uniqueItems": true,
+          "example": "true"
+        }
+      }
+    },
+    "Password": {
+      "properties": {
+        "password": {
+          "type": "string",
+          "uniqueItems": true,
+          "minLength": 6
+        },
+        "checkPassword": {
+          "type": "string",
+          "uniqueItems": true,
+          "minLength": 6
+        }
+      }
+    },
     "UserUpdate": {
       "properties": {
         "name": {
@@ -238,6 +410,11 @@
           "type": "boolean",
           "uniqueItems": true,
           "example": "true"
+        },
+        "visible": {
+          "type": "boolean",
+          "uniqueItems": true,
+          "example": "true"
         }
       }
     },
@@ -253,7 +430,75 @@
         },
         "message": {
           "type": "object",
-          "$ref": "#/definitions/User"
+          "$ref": "#/definitions/UserResponse"
+        }
+      }
+    },
+    "Deleted200": {
+      "properties": {
+        "status": {
+          "type": "integer",
+          "example": 200
+        },
+        "error": {
+          "type": "boolean",
+          "example": false
+        },
+        "message": {
+          "type": "object",
+          "properties": {
+            "n": {
+              "type": "integer"
+            },
+            "nModified": {
+              "type": "integer"
+            },
+            "ok": {
+              "type": "integer"
+            }
+          }
+        }
+      }
+    },
+    "Update200": {
+      "properties": {
+        "status": {
+          "type": "integer",
+          "example": 200
+        },
+        "error": {
+          "type": "boolean",
+          "example": false
+        },
+        "message": {
+          "type": "object",
+          "properties": {
+            "n": {
+              "type": "integer"
+            },
+            "nModified": {
+              "type": "integer"
+            },
+            "ok": {
+              "type": "integer"
+            }
+          }
+        }
+      }
+    },
+    "Created201": {
+      "properties": {
+        "status": {
+          "type": "integer",
+          "example": 201
+        },
+        "error": {
+          "type": "boolean",
+          "example": false
+        },
+        "message": {
+          "type": "object",
+          "$ref": "#/definitions/UserResponse"
         }
       }
     },
@@ -270,6 +515,22 @@
         "message": {
           "type": "string",
           "example": "Bad Request"
+        }
+      }
+    },
+    "Error404": {
+      "properties": {
+        "status": {
+          "type": "integer",
+          "example": 404
+        },
+        "error": {
+          "type": "boolean",
+          "example": true
+        },
+        "message": {
+          "type": "string",
+          "example": "Item não encontrado!"
         }
       }
     },
